tests/unit/guardrails/block-privilege-escalation/kyverno-test.yaml
name: block-privilege-escalation-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: block-privilege-escalation
    rule: block-privilege-escalation
    resource: good-pod
    kind: Pod
    result: pass
  - policy: block-privilege-escalation
    rule: block-privilege-escalation
    resource: bad-pod-no-securitycontext
    kind: Pod
    result: fail
  - policy: block-privilege-escalation
    rule: block-privilege-escalation
    resource: bad-pod-escalation-true
    kind: Pod
    result: fail
